# BinaryCode

./: CMakeLists.txt  README.md
cmake/: BinaryCodeConfig.cmake.in
cmake/external_repos/: BinaryCodeGenMat.cmake
examples/: bc_basic_usage.cpp
include/: BinaryCode.hpp
src/: BinaryCode.cpp
tests/: test_BinaryCode.cpp
